Nested/v1.1/NATGateway.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "PublicSubnetA": {
      "Description": "PublicSubnetA:",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PublicSubnetB": {
      "Description": "PublicSubnetB:",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PrivateSubnetA": {
      "Description": "PrivateSubnetA:",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PrivateSubnetB": {
      "Description": "PrivateSubnetB:",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "VPCName": {
      "Description": "VPC Name:",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "EC2SRTA1JBZPaaa": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NATRouteTableA"
        },
        "SubnetId": {
          "Ref": "PrivateSubnetA"
        }
      }
    },
    "NATRouteTableA": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCName"
        },
        "Tags": [
          {
            "Key": "Createdby",
            "Value": "Mehdi"
          },
          {
            "Key": "Name",
            "Value": "NATRouteTableA"
          }
        ]
      }
    },
    "NATGatewayA": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "EIPforNATGatewayA",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnetA"
        }
      },
      "DependsOn": [
        "EIPforNATGatewayA"
      ]
    },
    "EIPforNATGatewayA": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATRouteA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "NATRouteTableA"
        },
        "NatGatewayId": {
          "Ref": "NATGatewayA"
        }
      }
    },
    "EIPforNATGatewayB": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATGatewayB": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "EIPforNATGatewayB",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnetB"
        }
      },
      "DependsOn": [
        "EIPforNATGatewayB"
      ]
    },
    "NATRouteB": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "NATRouteTableB"
        },
        "NatGatewayId": {
          "Ref": "NATGatewayB"
        }
      }
    },
    "NATRouteTableB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCName"
        },
        "Tags": [
          {
            "Key": "Createdby",
            "Value": "Mehdi"
          },
          {
            "Key": "Name",
            "Value": "NATRouteTableB"
          }
        ]
      }
    },
    "EC2SRTA56A7K": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NATRouteTableB"
        },
        "SubnetId": {
          "Ref": "PrivateSubnetB"
        }
      }
    }
  }
}
